--- a/drivers/media/platform/msm/camera_v2/sensor/Makefile
+++ b/drivers/media/platform/msm/camera_v2/sensor/Makefile
@@ -4,18 +4,18 @@ ccflags-y += -Idrivers/media/platform/msm/camera_v2/camera
 ccflags-y += -Idrivers/media/platform/msm/camera_v2/sensor/io
 ccflags-y += -Idrivers/media/platform/msm/camera_v2/sensor/cci
 obj-$(CONFIG_MSMB_CAMERA) += cci/ io/ csiphy/ csid/ actuator/ flash/ eeprom/
-obj-$(CONFIG_MSM_CAMERA_SENSOR) += msm_sensor.o
-obj-$(CONFIG_S5K3L1YX) += s5k3l1yx.o
-obj-$(CONFIG_IMX135) += imx135.o
-obj-$(CONFIG_IMX134) += imx134.o
-obj-$(CONFIG_OV8825) += ov8825.o
-obj-$(CONFIG_OV8865) += ov8865.o
-obj-$(CONFIG_s5k4e1) += s5k4e1.o
+obj-$(CONFIG_MSM_CAMERA_SENSOR) += msm_sensor.o msm_camsensor_register.o
+#13M sensor
 obj-$(CONFIG_OV12830) += ov12830.o
-obj-$(CONFIG_OV2720) += ov2720.o
-obj-$(CONFIG_OV9724) += ov9724.o
-obj-$(CONFIG_HI256) += hi256.o
-obj-$(CONFIG_OV5648) += ov5648.o
-obj-$(CONFIG_MT9M114) += mt9m114.o
-obj-$(CONFIG_SP1628) += sp1628.o
-obj-$(CONFIG_GC0339) += gc0339.o
+obj-$(CONFIG_OV12830_MCNEX) += ov12830_mcnex.o
+obj-$(CONFIG_OV12830_SUNRISE) += ov12830_sunrise.o
+#8M sensor
+obj-$(CONFIG_S5K3H7) += s5k3h7.o
+obj-$(CONFIG_OV8865_QTECH) += ov8865_qtech.o
+obj-$(CONFIG_HI841_QTECH) += hi841_qtech.o
+#5M sensor
+obj-$(CONFIG_OV5648_MCNEX) += ov5648_mcnex.o
+obj-$(CONFIG_OV5648_SUNRISE) += ov5648_sunrise.o
+#2M sensor
+obj-$(CONFIG_GC2235_HUAQUAN) += gc2235_huaquan.o
+obj-$(CONFIG_GC2235_IMATEC) += gc2235_imatec.o
