--- a/arch/arm/configs/q1100_defconfig
+++ b/arch/arm/configs/q1100_defconfig
@@ -2153,17 +2153,27 @@ CONFIG_MSM_CSIPHY=y
 CONFIG_MSM_CSID=y
 CONFIG_MSM_ISPIF=y
 CONFIG_MSMB_CAMERA=y
+CONFIG_MSMB_JPEG=y
+CONFIG_MSM_VIDC_V4L2=y
+CONFIG_MSM_WFD=y
+CONFIG_MEDIA_TUNER=y
+CONFIG_MEDIA_TUNER_CUSTOMISE=y
+#Sensors
+CONFIG_OV5648_MCNEX=y
+CONFIG_OV5648_SUNRISE=y
+CONFIG_GC2235_HUAQUAN=y
+CONFIG_GC2235_IMATEC=y
+CONFIG_S5K3H7=y
+CONFIG_OV8865_QTECH=y
+CONFIG_HI841_QTECH=y
 # CONFIG_MSM_CAMERA is not set
 # CONFIG_MT9M114 is not set
 # CONFIG_OV2720 is not set
 # CONFIG_OV8825 is not set
 # CONFIG_IMX135 is not set
-
 # CONFIG_MSM_CSI20_HEADER is not set
-
 # CONFIG_S5K3L1YX is not set
 # CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
-
 # CONFIG_MSMB_CAMERA_DEBUG is not set
 # CONFIG_MSM_CSI22_HEADER is not set
 # CONFIG_MSM_ISPIF_V1 is not set
@@ -2171,22 +2181,12 @@ CONFIG_MSMB_CAMERA=y
 # CONFIG_OV9724 is not set
 # CONFIG_HI256 is not set
 # CONFIG_OV5648 is not set
-CONFIG_OV5648_MCNEX=y
-CONFIG_OV5648_SUNRISE=y
-CONFIG_GC2235_HUAQUAN=y
-CONFIG_GC2235_IMATEC=y
 # CONFIG_SP1628 is not set
 # CONFIG_GC0339 is not set
 # CONFIG_s5k4e1 is not set
 # CONFIG_OV12830 is not set
 # CONFIG_OV12830_MCNEX is not set
 # CONFIG_OV12830_SUNRISE is not set
-CONFIG_S5K3H7=y
-CONFIG_OV8865_QTECH=y
-CONFIG_HI841_QTECH=y
-CONFIG_MSMB_JPEG=y
-CONFIG_MSM_VIDC_V4L2=y
-CONFIG_MSM_WFD=y
 # CONFIG_MSM_WFD_DEBUG is not set
 # CONFIG_MSM_VCAP is not set
 # CONFIG_MEDIA_ATTACH is not set
