msm:camera Add camera support for yep_product x825

--- a/arch/arm/configs/q1100_defconfig
+++ b/arch/arm/configs/q1100_defconfig
@@ -363,7 +363,7 @@ CONFIG_MSM_MPM_OF=y
 #
 # MSM Board Selection
 #
-#CONFIG_YEP_PRODUCT_X825=y
+CONFIG_YEP_PRODUCT_X825=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
